@@ -106,6 +106,14 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.2</version>
+        <configuration>
+          <argLine>${gc.args}</argLine>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
         <executions>
           <execution>
@@ -125,6 +133,13 @@
   </build>
 
   <profiles>
+    <profile>
+      <id>gc-finetune</id>
+      <properties>
+        <!-- GC tuning and logging; JVM8-compatible flags -->
+        <gc.args>-XX:+UseG1GC -XX:+ExplicitGCInvokesConcurrent -XX:+UseStringDeduplication -XX:MaxGCPauseMillis=200 -XX:InitiatingHeapOccupancyPercent=30 -XX:MaxTenuringThreshold=8 -XX:+PrintGC -XX:+PrintGCDetails -XX:+PrintGCDateStamps -Xloggc:${project.build.directory}/gc.log -XX:MaxDirectMemorySize=1024m -Xms512m -Xmx2g</gc.args>
+      </properties>
+    </profile>
     <profile>
       <id>jni-load</id>
       <properties>
@@ -163,7 +178,7 @@ IFACE_OPT=""; \
 if [ -n "${iface}" ]; then IFACE_OPT="--mca btl_tcp_if_include ${iface}"; else IFACE_OPT="--mca btl_tcp_if_exclude lo,docker0"; fi; \
 mpiexec -np ${np} --use-hwthread-cpus --oversubscribe --map-by core --bind-to core \
   ${IFACE_OPT} \
-  java -Djava.library.path=${java.library.path} -cp ${fat.jar} \
+  java  -Djava.library.path= -cp  \
   com.pinterest.drsquirrel.jni.JniShuffleLoadRunner ${mode} || true
                       ]]>
                     </argument>
@@ -173,6 +188,53 @@ mpiexec -np ${np} --use-hwthread-cpus --oversubscribe --map-by core --bind-to co
                     <SHUFFLE_LOAD_ITERS>${iters}</SHUFFLE_LOAD_ITERS>
                     <SHUFFLE_LOAD_OUT>${out}</SHUFFLE_LOAD_OUT>
                   </environmentVariables>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>jni-nested</id>
+      <properties>
+        <np>4</np>
+        <mode></mode>
+        <iface></iface>
+        <java.library.path>${project.basedir}/../build</java.library.path>
+        <fat.jar>${project.build.directory}/${project.artifactId}-${project.version}-jar-with-dependencies.jar</fat.jar>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>3.5.0</version>
+            <executions>
+              <execution>
+                <id>run-jni-nested</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <executable>bash</executable>
+                  <arguments>
+                    <argument>-lc</argument>
+                    <argument>
+                      <![CDATA[
+set -eo pipefail; 
+export LD_LIBRARY_PATH="${java.library.path}:${LD_LIBRARY_PATH:-}"; 
+IFACE_OPT=""; 
+if [ -n "${iface}" ]; then IFACE_OPT="--mca btl_tcp_if_include ${iface}"; else IFACE_OPT="--mca btl_tcp_if_exclude lo,docker0"; fi; 
+mpiexec -np ${np} --use-hwthread-cpus --oversubscribe --map-by core --bind-to core \
+  ${IFACE_OPT} \
+  java  -Djava.library.path= -cp  \
+  com.pinterest.drsquirrel.jni.JniNestedRunner ${mode} || true
+                      ]]>
+                    </argument>
+                  </arguments>
                 </configuration>
               </execution>
             </executions>
@@ -218,7 +280,7 @@ IFACE_OPT=""; \
 if [ -n "${iface}" ]; then IFACE_OPT="--mca btl_tcp_if_include ${iface}"; else IFACE_OPT="--mca btl_tcp_if_exclude lo,docker0"; fi; \
 mpiexec -np ${np} --use-hwthread-cpus --oversubscribe --map-by core --bind-to core \
   ${IFACE_OPT} \
-  java -Djava.library.path=${java.library.path} -cp ${fat.jar} \
+  java  -Djava.library.path= -cp  \
   com.pinterest.drsquirrel.jni.JniCogroupLoadRunner ${mode} || true
                       ]]>
                     </argument>
